--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,12 @@ body, html {
    overflow: hidden;
 }
 
+html {
+   overflow-y: scroll;
+}
+
 .background {
-   position: relative;
+   position: fixed;
    height: 100vh;
    width: 100vw;
    background: url(Assets/static.png);
@@ -31,4 +35,27 @@ body, html {
    height: 100vh;
    transform: rotate(45deg);
    clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%);
+}
+
+.Main {
+   position: relative;
+   top: 0;
+   left: 0;
+   width: 100vw;
+   height: auto;
+   display: flex;
+   flex-direction: column;
+}
+
+.Main div {
+   background-color: #ffffff0a;
+   width: 100vw;
+   height: 100vh;
+   margin-bottom: 10vh;
+}
+
+canvas {
+   width: 100vw;
+   height: 100vh;
+   display: block;
 }
