--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,15 @@ html {
    height: 100vh;
    width: 100vw;
    background: url(Assets/static.png);
+   z-index: 1;
+}
+
+.background canvas {
+   width: 100vw;
+   height: 100vh;
+   display: block;
+   filter: blur(4px);
+   z-index: 2;
 }
 
 .blur {
@@ -24,11 +33,12 @@ html {
    overflow: hidden;
    transform: translate(-50%, -50%);
    filter: blur(64px);
+   z-index: 3;
 }
 
 .clip {
    position: absolute;
-   background-color: #9800003e;
+   background-color: #530000;
    left: calc(50% - 30rem);
    top: -15vh;
    width: 70rem;
@@ -45,6 +55,7 @@ html {
    height: auto;
    display: flex;
    flex-direction: column;
+   z-index: 5;
 }
 
 .Main div {
@@ -52,10 +63,4 @@ html {
    width: 100vw;
    height: 100vh;
    margin-bottom: 10vh;
-}
-
-canvas {
-   width: 100vw;
-   height: 100vh;
-   display: block;
 }
