--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,6 @@
 body, html {
    margin: 0;
    padding: 0;
-   overflow: hidden;
-}
-
-html {
-   overflow-y: scroll;
 }
 
 .background {
@@ -16,35 +11,30 @@ html {
    z-index: 1;
 }
 
-.background canvas {
+.background div {
+   position: relative;
    width: 100vw;
    height: 100vh;
    display: block;
-   filter: blur(4px);
    z-index: 2;
 }
 
-.blur {
+.background canvas {
    position: absolute;
-   width: 80%;
-   height: 80%;
-   top: 50%;
-   left: 50%;
-   overflow: hidden;
-   transform: translate(-50%, -50%);
-   filter: blur(64px);
-   z-index: 3;
+   width: 100vw;
+   height: 100vh;
+   display: block;
+   filter: blur(3.5px);
+   z-index: 2;
 }
 
-.clip {
-   position: absolute;
-   background-color: #530000;
-   left: calc(50% - 30rem);
-   top: -15vh;
-   width: 70rem;
-   height: 100vh;
-   transform: rotate(45deg);
-   clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%);
+.ball {
+   position: relative;
+   border-radius: 50%;
+   filter: blur(64px);
+   transition: opacity 1s ease-in-out;
+   opacity: 0;
+   z-index: 3;
 }
 
 .Main {
@@ -58,8 +48,27 @@ html {
    z-index: 5;
 }
 
-.Main div {
+.Main .box {
    width: 100vw;
    height: 100vh;
    margin-bottom: 10vh;
+}
+
+.Window {
+   position: relative;
+   background-color: rgba(0,0,0,0.8);
+   top: 10vh;
+   left: 0;
+   width: 75vw;
+   height: auto;
+   min-height: 75vh;
+   
+   margin-left: auto;
+   margin-right: auto;
+   margin-bottom: 20vh;
+   
+   border-radius: 8px;
+   border: 1px solid #27272A;
+
+   z-index: 5;
 }
