--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ body, html {
 .ball {
    position: relative;
    border-radius: 50%;
-   filter: blur(64px);
    transition: opacity 1s ease-in-out;
    opacity: 0;
    z-index: 3;
@@ -53,15 +52,56 @@ body, html {
    z-index: 5;
 }
 
-.Centred {
+.Collumn {
+   width: 80%;
+   height: auto;
+   min-height: 80vh;
+
+   display: flex;
+   flex-direction: column;
+	justify-content: center;
+   align-items: center;
+}
+
+.Window {
    background-color: red;
    width: 80%;
-   height: 180vh;
+   height: auto;
+   min-height: 80vh;
 
-   margin-top: 10vh;
-   margin-bottom: 10vh;
+   margin-top: 5vh;
+   margin-bottom: 5vh;
 
-   background-color: rgba(0,0,0,0.7);
+   background-color: rgba(0,0,0,0.75);
    border-radius: 8px;
    border: 1px solid #27272A;
+
+   display: flex;
+   flex-direction: column;
+	justify-content: center;
+   align-items: center;
+}
+
+.Hero {
+   height: 100%;
+   min-height: 80vh;
+   width: 100%;
+
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.Hero h1 {
+   display: block;
+
+   margin: 0 auto;
+   margin-top: 3vw;
+   margin-bottom: 1.5vw;
+
+   color: #fff;
+}
+
+.Hero img {
+   filter: blur(0px);
 }
