--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,8 @@ body, html {
    height: auto;
    min-height: 80vh;
 
-   margin-top: 5vh;
-   margin-bottom: 5vh;
+   margin-top: 10vh;
+   margin-bottom: 10vh;
 
    background-color: rgba(0,0,0,0.75);
    border-radius: 8px;
@@ -102,6 +102,18 @@ body, html {
    color: #fff;
 }
 
-.Hero img {
-   filter: blur(0px);
+.Hero_Logo {
+   position: relative;
+}
+
+.Hero_Logo img {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, 0);
+}
+
+.Hero_Logo img:last-child {
+   transform: translate(-47.5%, 0);
+   filter: blur(16px);
 }
